--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,16 +2,20 @@
    "java.configuration.runtimes": [
   {
     "name": "JavaSE-1.8",
-    "path": "/path/to/jdk-8",
+    "path": "/path/to/jdk-8"
   },
   {
     "name": "JavaSE-11",
-    "path": "/path/to/jdk-11",
+    "path": "/path/to/jdk-11"
   },
   {
     "name": "JavaSE-17",
-    "path": "/path/to/jdk-17",
-    "default": true
+    "path": "/path/to/jdk-17"
   },
+  {
+    "name": "JavaSE-20",
+    "path": "/path/to/jdk-20",
+    "default": true
+  }
 ]
 }
